clean up unnecessary files, update landing image

--- a/index.html
+++ b/index.html
@@ -2,6 +2,4 @@
 layout: default
 ---
 
-![Lindsey Scales](/images/PortfolioName.png "Lindsey Scales")
-
-Hello, world.
+<img src="/images/PortfolioName.png" alt="Lindsey Scales" />
