add wrapper to index

--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 layout: default
 ---
 
-<img src="/images/PortfolioName.png" alt="Lindsey Scales" />
+<div class="view-wrapper">
+  <img src="/images/PortfolioName.png" alt="Lindsey Scales" />
+</div>
