update responsive images

--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@ layout: default
 ---
 
 <div class="view-wrapper">
-  <img src="/images/PortfolioName.png" alt="Lindsey Scales" />
+  <img class="h-mobile-hide" src="/images/PortfolioName.png" alt="Lindsey Scales" />
+  <img class="h-mobile-show" src="/images/mobileLanding.png" alt="Lindsey Scales" />
 </div>
