update landing image for mobile

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <div class="view-wrapper">
-  <img class="h-mobile-hide" src="/images/PortfolioName.png" alt="Lindsey Scales" />
-  <img class="h-mobile-show" src="/images/mobileLanding.png" alt="Lindsey Scales" />
+  <img class="h-mobile-hide" src="/images/PortfolioName.png" alt="Lindsey Scales, developer &amp; designer aligning products &amp; people with purpose" />
+  <img class="h-mobile-show" src="/images/mobileName.png" alt="Lindsey Scales, developer &amp; designer aligning products &amp; people with purpose" />
 </div>
