add flex wrapper to index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<div class="view-wrapper">
+<div class="view-wrapper view-wrapper--flex">
   <img class="h-mobile-hide" src="/images/PortfolioName.png" alt="Lindsey Scales, developer &amp; designer aligning products &amp; people with purpose" />
   <img class="h-mobile-show" src="/images/mobileName.png" alt="Lindsey Scales, developer &amp; designer aligning products &amp; people with purpose" />
 </div>
